Align image oval in center and update styling to keep correct image size

--- a/src/assets/css/5-elements/_image-oval.scss
+++ b/src/assets/css/5-elements/_image-oval.scss
@@ -1,7 +1,8 @@
 @use '../2-design-tokens/index' as *;
 
 .image-oval {
-  min-height: 200px;
+  min-height: 400px;
+  height: auto;
   aspect-ratio: 3/4;
   position: relative;
 
@@ -11,8 +12,11 @@
 }
 
 .image-oval__image img {
+  position: absolute; 
+  top: 0;
+  left: 0;
+  width: 100%; 
   height: 100%;
-  width: 100%;
   object-fit: cover;
 }
 
@@ -27,6 +31,10 @@
 }
 
 .image-oval__first {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  border-radius: 1000px;
   top: 0;
   left: 0;
   z-index: 3;
